# cohort-explorer

./: .gitignore  ARCHITECTURE.md  README.md  cohort-explorer-ontology.ttl  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  hardhat.config.ts  package-lock.json  pyproject.toml
.cursor/rules/: local-dev-setup.mdc  project-overview.mdc  workflow-principles.mdc
.github/workflows/: docs.yml
api/: config.py
api/contracts/abis/: AccessCredentialNFT.json  AttestationRegistry.json  CommitmentTracker.json  DUOAttestationResolver.json  DUOConsentToken.json  IBISVerifier.json  ReputationRegistry.json  RoleAccount.json  RoleAccountFactory.json  RoleGroupRegistry.json  UserIdentityRegistry.json
api/models/: __init__.py  duo.py  requests.py
api/routes/: attestations.py  ontology.py  providers.py  requesters.py
api/services/: auth.py  blockchain.py  compliance.py  compliance_scoring.py  iso3166.py  oprf.py  pq_crypto.py  redis_cache.py  relay.py  requester_type.py  secure_erasure.py  wallet.py
api/services/ontology/: __init__.py  icd10.py  ror.py  service.py
backend/: .dockerignore  Dockerfile  GRAPH_NAMING_FIX.md  QUERY_COMPATIBILITY_ANALYSIS.md  QUERY_COMPATIBILITY_FIXES_APPLIED.md  check_metadata_duplicates.py  dcr_ViennaHF-Register_representation.json  pyproject.toml  query_viennahf.sh  requirements.txt  test_langchain_imports.py  test_sparql_data.py
backend/CohortVarLinker/: LICENSE  README.md  main.py  main_llm.py  preprocess.ipynb  validate_cde.py
backend/CohortVarLinker/mapping_output/: time-chf_gissi-hf_full.csv
backend/CohortVarLinker/queries/: sparql_queries.txt
backend/CohortVarLinker/src/: config.py  constraints.py  data_model.py  embed.py  embed_model.py  fetch.py  fuzz_match.py  graph_similarity.py  harmonized_variable.py  lazy_imports.py  lazy_model.py  llm_call.py  modes.py  neuro_matcher.py  omop_graph.py  omop_graph_nx.py  ontology_model.py  policy.py  query_builder.py  run.py  study_context.py  study_kg.py  utils.py  validate_cde.py  variable_profile.py  variables_kg.py  vector_db.py  verdict.py
backend/CohortVarLinker/updated_CohortVarLinker/: config.py  constraints.py  data_model.py  derived_variables.py  embed_model.py  evaluate_cross_study.py  fuzz_match.py  graph_similarity.py  llm_call.py  main_llm.py  neuro_matcher.py  omop_graph_nx.py  policy.py  query_builder.py  run.py  study_kg.py  utils.py  variables_kg.py  vector_db.py  verdict.py
backend/CohortVarLinker/updated_src/: constraints.py  data_model.py  embed_model.py  neuro_matcher.py  omop_graph_nx.py  policy.py  query_builder.py  run.py  utils.py  verdict.py
backend/src/: admin.py  analysisDCR_scripts.py  analysis_dcr_logging.py  auth.py  blockchain.py  cohort_cache.py  config.py  data_analysis.py  decentriq.py  docs.py  eda.py  eda_scripts.py  explore.py  main.py  mapping.py  mapping_logger.py  models.py  monitoring.py  script_edited.py  upload.py  utils.py
backend/src/mapping_generation/: __init__.py  athena_api_retriever.py  bi_encoder.py  code_generator.py  compress.py  data_loader.py  datamanager.py  embeddingfilter.py  eval_mapping.py  evalmap.py  graph_omop.py  llm_chain.py  manager_llm.py  mapping_templates.json  param.py  preprocess_concepts.py  py_model.py  qdrant.py  retriever.py  retriever_.py  utils.py  vector_index.py
backend/updated_CohortVarLinker/: config.py  evaluate_cross_study.py  utils.py  variable_profile.py  variables_kg.py  vector_db.py
circuits/chain_position/src/: main.nr
circuits/noir/duo_permission/: Nargo.toml
circuits/semaphore/: build-circuits.sh
contracts/: AccessCredentialNFT.sol  AttestationRegistry.sol  CommitmentTracker.sol  DUOConsentVaultV2.sol  DUOOntology.sol  IBISVerifier.sol  InstitutionRegistry.sol  NullifierRegistry.sol  UserIdentityRegistry.sol
docker/: Dockerfile.api  Dockerfile.deployer
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/mock/: data.json.example
frontend/public/: cohort-statistics.json  cohortsSparqlWorker.js  cohortsWorker.js  icd10-parents-map.txt  icd10-targeted.json  icd10.json
frontend/src/: jsx.d.ts  types.ts  utils.ts
frontend/src/components/: AgeDistributionBar.tsx  AgeRangeWhisker.tsx  AutocompleteConcept.tsx  CohortSummaryGraphs.tsx  CohortsContext.tsx  DcrLogPanel.tsx  FilterByMetadata.tsx  FlowNode.tsx  GenderPieChart.tsx  Icons.tsx  MappingGraphView.tsx  Nav.tsx  VariableGraphModal.tsx  VariablesList.tsx  dcrSessions.ts
frontend/src/pages/: _app.tsx  admin-settings.tsx  all-consent-declarations.tsx  cohorts.tsx  dcrs-details.tsx  dcrs.tsx  docs_store.tsx  index.tsx  mapflow.tsx  mapping-comparison.tsx  mapping-log.tsx  mapping.tsx  upload.tsx
frontend/src/styles/: globals.css
frontend/src/types/: jsx.d.ts
frontend/src/utils/: edaParsing.ts  parseAgeRange.ts  search.ts
icarechain/: .gitignore  README.md  deploy-and-generate.sh  docker-compose.yml  package.json  requirements.txt
icarechain-local-patches/: README.md  apply.sh
icarechain-local-patches/api/routes/: admin.py
icarechain/api/: main.py
icarechain/api/models/: __init__.py  duo.py
icarechain/api/routes/: auth.py  cohorts.py  commitments.py  health.py  ontology.py  requesters.py
icarechain/api/services/: blockchain.py  cache.py  compliance.py  ibis.py  identity.py  merkle.py  oprf.py  pq_crypto.py  redis_cache.py  relay.py  requester_type.py  secure_erasure.py  uc_simulation.py
icarechain/circuits/chain_position/: Nargo.toml
icarechain/circuits/identity_helper/: Nargo.toml
icarechain/contracts/: DUOAttestationResolver.sol  DUOConsentToken.sol  GasSponsor.sol  HonkVerifier.sol  IdentityRegistry.sol  ReputationRegistry.sol  RoleAccount.sol  RoleAccountFactory.sol  RoleGroupRegistry.sol  TrustedForwarder.sol  ZKConsentVerifier.sol
icarechain/docker/: Dockerfile.hardhat  redis.conf
icarechain/scripts/: deploy.ts  seed-icd10.ts
scripts/: albumin_measurement.shacl.ttl  backup.sh  deploy.sh  docs-build.sh  docs-install.sh  docs-start.sh  fmt.sh  generate-abis.ts  generate_icd10_json.py
(+42 files in other folders)
